# wares

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  create_get_wares.sh
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-problem.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml
cli/: premake5.lua
cli/source/: main.cpp
cmake/: wares.cmake
cmake/tests/: CMakeLists.txt  test_json_functions.cmake
cmake/tests/cmake_tests/: test_json_functions.cmake
logos/: wares_icon.aseprite  wares_logo.aseprite  wares_text.aseprite
premake/: get_wares.lua  run_tests.lua  wares.lua
premake/tests/: _tests.lua  test_version.lua
premake/wares/: array.lua  log.lua  utils.lua  version.lua  wares.lua
premake/wares/tests/: _tests.lua  test_version.lua  test_version_comparator.lua
src/: cache.rs  lib.rs  lock.rs  main.rs  manifest.rs  utils.rs
src/premake/: luashim.rs  mod.rs
src/premake/luashim/: luashim.c  luashim.h  premake5.lua
