[package]
name = "wares"
version = "0.1.0"
edition = "2021"

[lib]
name = "wares_native"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "wares"
path = "src/main.rs"
required-features = ["build-binary"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
semver = "1.0.0"
git2 = "0.19.0"
toml = "0.8.19"
thiserror = "1.0.63"
regex = "1.10.6"
colored = "2.1.0"

# needed for the binary target
clap = { version = "4.5.0", features = [ "derive" ], optional = true }

[build-dependencies]
cc = "1.0"
bindgen = "0.69.1"

[features]
build-binary = [ "clap" ]